--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>pdfV demo</title>
     <!-- The css of the PdfV -->
-    <link rel="stylesheet" href="../css/style.min.css">
+    <link rel="stylesheet" href="./css/style.min.css">
 
     <!-- You can remove that -->
     <style media="screen">
@@ -55,9 +55,9 @@
 
 
     <!-- The pdfV file -->
-    <script src="../build/pdfV.js"></script>
+    <script src="./build/pdfV.js"></script>
 
     <!-- Your default .js file -->
-    <script src="./main.js" ></script>
+    <script src="./demo/main.js" ></script>
   </body>
 </html>
