--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>pdfV demo</title>
     <!-- The css of the PdfV -->
@@ -8,56 +9,78 @@
 
     <!-- You can remove that -->
     <style media="screen">
-      body{
-        background-color: #424242;
-      }
-      h1{
-        color: white;
-        text-align: center;
-        font-family: Helvetica, Arial, Sans-Serif;
-      }
-      #pdfViewer{
-        border-top: 1px solid #fff;
-        border-bottom: 1px solid #fff;
-      }
-      .button{
-        width: 100%;
-        text-align: center;
-      }
-      .button>a{
-        display: inline-block;
-        margin: 20px;
-        background-color: #e74c3c;
-        text-decoration: none;
-        color: white;
-        padding: 10px;
-        font-size: 20px;
-        border-radius: 5px;
-        font-family: Helvetica, Arial, Sans-Serif;
-        transition: all .5s;
-      }
-      .button>a:hover{
-        background-color: #c0392b;
-      }
+        body {
+            background-color: #424242;
+        }
+
+        h1 {
+            color: white;
+            text-align: center;
+            font-family: Helvetica, Arial, Sans-Serif;
+        }
+
+        #pdfViewer {
+            border-top: 1px solid #fff;
+            border-bottom: 1px solid #fff;
+        }
+
+        .button {
+            width: 100%;
+            text-align: center;
+        }
+
+        .button>a {
+            display: inline-block;
+            margin: 20px;
+            background-color: #e74c3c;
+            text-decoration: none;
+            color: white;
+            padding: 10px;
+            font-size: 20px;
+            border-radius: 5px;
+            font-family: Helvetica, Arial, Sans-Serif;
+            transition: all .5s;
+        }
+
+        .button>a:hover {
+            background-color: #c0392b;
+        }
     </style>
 
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>pdfV Demo</h1>
     <div id="pdfViewer">
 
     </div>
 
+    <div id="pdfViewer2">
+
+    </div>
+
     <!-- You can remove that -->
     <div class="button">
-      <a href="https://github.com/wladi0097/pdfV">Code and Download</a>
+        <a href="https://github.com/wladi0097/pdfV">Code and Download</a>
     </div>
 
 
     <!-- The pdfV file -->
     <script src="./build/pdfV.js"></script>
 
+    <!-- FOR DEBUGGING -->
+    <!-- <script src="./js/pdf.js" charset="utf-8"></script>
+    <script src="./js/pdfV.js" charset="utf-8"></script>
+    <script src="./js/_animation.js" charset="utf-8"></script>
+    <script src="./js/_pdfViewerElement_builder.js" charset="utf-8"></script>
+    <script src="./js/_pdfViewerElement_events.js" charset="utf-8"></script>
+    <script src="./js/_pdfViewerElement_navigator.js" charset="utf-8"></script>
+    <script src="./js/_pdfViewerElement_variables.js" charset="utf-8"></script>
+    <script src="./js/_pdfViewerElement_validation.js" charset="utf-8"></script>
+    <script src="./js/_pdfViewerElement.js" charset="utf-8"></script> -->
+
     <!-- Your default .js file -->
-    <script src="./demo/main.js" ></script>
-  </body>
+    <script src="./demo/main.js"></script>
+</body>
+
 </html>
